--- a/test-dep.yaml
+++ b/test-dep.yaml
@@ -4,16 +4,16 @@ kind: Deployment
 metadata:
     name: httpd-deployment
     labels:
-      app: httpd2
+      app: food-master
 spec:
  replicas: 3
  selector:
      matchLabels:
-      app: httpd2
+      app: food-master
  template:
      metadata:
         labels:
-            app: httpd2
+            app: food-master
      spec:
        containers:
          - name: httpd2
