--- a/test-svc.yaml
+++ b/test-svc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: httpd-service
 spec:
   selector:
-     app: httpd2
+     app: food-master
   ports:
    - port: 80
      targetPort: 80
